Changes Build site

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,18 +29,19 @@
 
 				<!--  Main navigation  -->
 				<ul class="main-nav nav navbar-nav navbar-right">
-					<li><a href="#home">בית</a></li>
-					<li><a href="#about">אודות</a></li>
-					<li><a href="#portfolio">פרופיל</a></li>
-					<li><a href="#service">שירותים</a></li>
-					<li><a href="#pricing">מחירים</a></li>
-					<li><a href="#team">צוות</a></li>
-					<li class="has-dropdown"><a href="#blog">בלוג</a>
-						<ul class="dropdown">
-							<li><a href="blog-single.html">blog post</a></li>
-						</ul>
-					</li>
-					<li><a href="#contact">צור קשר</a></li>
+						<li><a href="#contact">צור קשר</a></li>
+						<li class="has-dropdown"><a href="#blog">בלוג</a>
+							<ul class="dropdown">
+									<li><a href="blog-single.html">בלוג פוסט</a></li>
+								</ul>
+						</li>
+							<li><a href="#team">צוות</a></li>
+							<li><a href="#pricing">מחירים</a></li>
+							<li><a href="#service">שירותים</a></li>
+							<li><a href="#portfolio">פורטפוליו</a></li>
+						<li><a href="#about">עלינו</a></li>
+				
+				<li><a href="#home">בית</a></li>
 				</ul>
 				<!-- /Main navigation -->
 
@@ -56,11 +57,14 @@
 					<!-- home content -->
 					<div class="col-md-10 col-md-offset-1">
 						<div class="home-content">
-							<h1 class="white-text">We Are Creative Agency</h1>
-							<p class="white-text">Morbi mattis felis at nunc. Duis viverra diam non justo. In nisl. Nullam sit amet magna in magna gravida vehicula. Mauris tincidunt sem sed arcu. Nunc posuere.
+							<h1 class="white-text">תמלולים לכל מטרה</h1>
+							<p class="white-text" style="font-size: 165%;">
+								 אנו פועלים לשירות אמין,מדויק,מהיר ומתחייבים באופן מלא לסודיות מוחלטת כלפי לקוחותינו
+								 <br>
+								 תמלול משפטי,תמלול ראיונות,תמלול שיחות
 							</p>
-							<button class="white-btn">Get Started!</button>
-							<button class="main-btn">Learn more</button>
+						<a href="#about">	<button  class="white-btn">התחל</button></a>
+						<a href="#service"><button class="main-btn">שירותים</button> </a>
 						</div>
 					</div>
 					<!-- /home content -->
@@ -84,17 +88,17 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">Welcome to Website</h2>
+					<h2 class="title">ברוכים הבאים</h2>
 				</div>
 				<!-- /Section header -->
 
 				<!-- about -->
 				<div class="col-md-4">
 					<div class="about">
-						<i class="fa fa-cogs"></i>
-						<h3>Fully Customizible</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-						<a href="#">Read more</a>
+						<i class="fa fa-truck"></i>
+						<h3>שירות מהיר</h3>
+						<p>מתחייבים לתמלול בתוך 24 שעות בלבד</p>
+						<!-- <a href="#">Read more</a> -->
 					</div>
 				</div>
 				<!-- /about -->
@@ -102,10 +106,10 @@
 				<!-- about -->
 				<div class="col-md-4">
 					<div class="about">
-						<i class="fa fa-magic"></i>
-						<h3>Awesome Features</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-						<a href="#">Read more</a>
+						<i class="fa fa-quora"></i>
+						<h3>איכות ואמינות</h3>
+						<p>אנו נפעל לשירות אמין ואיכותי ולסודיות מוחלטת, אנו מתחייבים להיצמד למקור ההקלטה ועל כך אין פשרות</p>
+						<!-- <a href="#">Read more</a> -->
 					</div>
 				</div>
 				<!-- /about -->
@@ -113,10 +117,10 @@
 				<!-- about -->
 				<div class="col-md-4">
 					<div class="about">
-						<i class="fa fa-mobile"></i>
-						<h3>Fully Responsive</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet.</p>
-						<a href="#">Read more</a>
+						<i class="fa fa-microphone"></i>
+						<h3>תמיכה בכל סוגי ההקלטות</h3>
+						<p>צוות התמלול שלנו תומך בקבצים שונים של שמע/וידאו, אנו ניתן מענה לכל סוג קובץ והקלטה</p>
+						<!-- <a href="#">Read more</a> -->
 					</div>
 				</div>
 				<!-- /about -->
@@ -256,69 +260,10 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">What we offer</h2>
+					<h2 >לייעוץ והצעת מחיר</h2>
+					<h3 class="title">050-4766046</h3>
 				</div>
 				<!-- /Section header -->
-
-				<!-- service -->
-				<div class="col-md-4 col-sm-6">
-					<div class="service">
-						<i class="fa fa-diamond"></i>
-						<h3>App Development</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
-					</div>
-				</div>
-				<!-- /service -->
-
-				<!-- service -->
-				<div class="col-md-4 col-sm-6">
-					<div class="service">
-						<i class="fa fa-rocket"></i>
-						<h3>Graphic Design</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
-					</div>
-				</div>
-				<!-- /service -->
-
-				<!-- service -->
-				<div class="col-md-4 col-sm-6">
-					<div class="service">
-						<i class="fa fa-cogs"></i>
-						<h3>Creative Idea</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
-					</div>
-				</div>
-				<!-- /service -->
-
-				<!-- service -->
-				<div class="col-md-4 col-sm-6">
-					<div class="service">
-						<i class="fa fa-diamond"></i>
-						<h3>Marketing</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
-					</div>
-				</div>
-				<!-- /service -->
-
-				<!-- service -->
-				<div class="col-md-4 col-sm-6">
-					<div class="service">
-						<i class="fa fa-pencil"></i>
-						<h3>Awesome Support</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
-					</div>
-				</div>
-				<!-- /service -->
-
-				<!-- service -->
-				<div class="col-md-4 col-sm-6">
-					<div class="service">
-						<i class="fa fa-flask"></i>
-						<h3>Brand Design</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
-					</div>
-				</div>
-				<!-- /service -->
 
 			</div>
 			<!-- /Row -->
