--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,16 +29,15 @@
 
 				<!--  Main navigation  -->
 				<ul class="main-nav nav navbar-nav navbar-right">
-						<li><a href="#contact">צור קשר</a></li>
+					
 						<li class="has-dropdown"><a href="#blog">בלוג</a>
 							<ul class="dropdown">
 									<li><a href="blog-single.html">בלוג פוסט</a></li>
 								</ul>
 						</li>
 							<li><a href="#team">צוות</a></li>
-							<li><a href="#pricing">מחירים</a></li>
-							<li><a href="#service">שירותים</a></li>
-							<li><a href="#portfolio">פורטפוליו</a></li>
+						
+							<li><a href="#newcontact">צור קשר</a></li>
 						<li><a href="#about">עלינו</a></li>
 				
 				<li><a href="#home">בית</a></li>
@@ -64,7 +63,7 @@
 								 תמלול משפטי,תמלול ראיונות,תמלול שיחות
 							</p>
 						<a href="#about">	<button  class="white-btn">התחל</button></a>
-						<a href="#service"><button class="main-btn">שירותים</button> </a>
+						<a href="#newcontact"><button class="main-btn">צור קשר</button> </a>
 						</div>
 					</div>
 					<!-- /home content -->
@@ -78,7 +77,7 @@
 	<!-- /Header -->
 
 	<!-- About -->
-	<div id="about" class="section md-padding">
+	<div id="about" class="section md-padding ">
 
 		<!-- Container -->
 		<div class="container">
@@ -89,6 +88,12 @@
 				<!-- Section header -->
 				<div class="section-header text-center">
 					<h2 class="title">ברוכים הבאים</h2>
+					<h3>תמלול : העברת הקלטות קוליות לכתב , הינה פעולה שמצריכה ניסיון רב ומיומנות.
+							לצוות המנוסה שלנו 15 שנות ניסיון בתחום בתמלול משפטי, תמלול ראיונות, תמלול שיחות, תמלול הקלטות.
+							כיום פעולת ההעברת קול לטקסט מתבצעת אוטומטית אך לצערנו ולנסיונו הרב של צוות לייף טייפ ניתן לומר בפירוש
+							כי האוטומציה שהמחשב מתרגם טקסט לקול לקויה בחסר, לכן נדרש תמלול מקצועי ופרטני על ידי אנשי מקצוע,
+							הבחנה בין גוווני קול שונים, סוגי אינטונציה,מבטאים שונים וכו הם חלק מאתגרינו כחברה לתמלול.
+							לתמלול מקצועי, מדויק ומהיר אנו מציעים פתרונות בדיוק לצרכים שלכם</h3>
 				</div>
 				<!-- /Section header -->
 
@@ -136,121 +141,11 @@
 
 
 	<!-- Portfolio -->
-	<div id="portfolio" class="section md-padding bg-grey">
 
-		<!-- Container -->
-		<div class="container">
-
-			<!-- Row -->
-			<div class="row">
-
-				<!-- Section header -->
-				<div class="section-header text-center">
-					<h2 class="title">Featured Works</h2>
-				</div>
-				<!-- /Section header -->
-
-				<!-- Work -->
-				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="assets/Template/img/work1.jpg" alt="">
-					<div class="overlay"></div>
-					<div class="work-content">
-						<span>Category</span>
-						<h3>Lorem ipsum dolor</h3>
-						<div class="work-link">
-							<a href="#"><i class="fa fa-external-link"></i></a>
-							<a class="lightbox" href="assets/Template/img/work1.jpg"><i class="fa fa-search"></i></a>
-						</div>
-					</div>
-				</div>
-				<!-- /Work -->
-
-				<!-- Work -->
-				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="assets/Template/img/work2.jpg" alt="">
-					<div class="overlay"></div>
-					<div class="work-content">
-						<span>Category</span>
-						<h3>Lorem ipsum dolor</h3>
-						<div class="work-link">
-							<a href="#"><i class="fa fa-external-link"></i></a>
-							<a class="lightbox" href="assets/Template/img/work2.jpg"><i class="fa fa-search"></i></a>
-						</div>
-					</div>
-				</div>
-				<!-- /Work -->
-
-				<!-- Work -->
-				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="assets/Template/img/work3.jpg" alt="">
-					<div class="overlay"></div>
-					<div class="work-content">
-						<span>Category</span>
-						<h3>Lorem ipsum dolor</h3>
-						<div class="work-link">
-							<a href="#"><i class="fa fa-external-link"></i></a>
-							<a class="lightbox" href="assets/Template/img/work3.jpg"><i class="fa fa-search"></i></a>
-						</div>
-					</div>
-				</div>
-				<!-- /Work -->
-
-				<!-- Work -->
-				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="assets/Template/img/work4.jpg" alt="">
-					<div class="overlay"></div>
-					<div class="work-content">
-						<span>Category</span>
-						<h3>Lorem ipsum dolor</h3>
-						<div class="work-link">
-							<a href="#"><i class="fa fa-external-link"></i></a>
-							<a class="lightbox" href="assets/Template/img/work4.jpg"><i class="fa fa-search"></i></a>
-						</div>
-					</div>
-				</div>
-				<!-- /Work -->
-
-				<!-- Work -->
-				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="assets/Template/img/work5.jpg" alt="">
-					<div class="overlay"></div>
-					<div class="work-content">
-						<span>Category</span>
-						<h3>Lorem ipsum dolor</h3>
-						<div class="work-link">
-							<a href="#"><i class="fa fa-external-link"></i></a>
-							<a class="lightbox" href="assets/Template/img/work5.jpg"><i class="fa fa-search"></i></a>
-						</div>
-					</div>
-				</div>
-				<!-- /Work -->
-
-				<!-- Work -->
-				<div class="col-md-4 col-xs-6 work">
-					<img class="img-responsive" src="assets/Template/img/work6.jpg" alt="">
-					<div class="overlay"></div>
-					<div class="work-content">
-						<span>Category</span>
-						<h3>Lorem ipsum dolor</h3>
-						<div class="work-link">
-							<a href="#"><i class="fa fa-external-link"></i></a>
-							<a class="lightbox" href="assets/Template/img/work6.jpg"><i class="fa fa-search"></i></a>
-						</div>
-					</div>
-				</div>
-				<!-- /Work -->
-
-			</div>
-			<!-- /Row -->
-
-		</div>
-		<!-- /Container -->
-
-	</div>
 	<!-- /Portfolio -->
 
 	<!-- Service -->
-	<div id="service" class="section md-padding">
+	<div id="newcontact" class="section md-padding bg-grey">
 
 		<!-- Container -->
 		<div class="container">
@@ -259,11 +154,59 @@
 			<div class="row">
 
 				<!-- Section header -->
-				<div class="section-header text-center">
+				<div class="section-header text-center ">
 					<h2 >לייעוץ והצעת מחיר</h2>
-					<h3 class="title">050-4766046</h3>
+					<a href="tel:050-4766046"><h3 class="title">050-4766046</h3></a>
 				</div>
 				<!-- /Section header -->
+
+				<div class="container">
+							<!-- contact -->
+				<div class="col-sm-4">
+						<a href="tel:050-4766046"><div class="contact">
+							<i class="fa fa-phone"></i>
+							<h3>Phone</h3>
+							<p>050-4766046</p>
+						</div>
+					</a>
+					</div>
+					<!-- /contact -->
+	
+					<!-- contact -->
+					<div class="col-sm-4">
+						<div class="contact">
+							<i class="fa fa-envelope"></i>
+							<h3>Email</h3>
+							<p>dorbenmoyal@gmail.com</p>
+						</div>
+					</div>
+					<!-- /contact -->
+	
+					<!-- contact -->
+					<div class="col-sm-4">
+						<div class="contact">
+							<i class="fa fa-map-marker"></i>
+							<h3>Address</h3>
+							<p>Qiryat Bialik, Israel</p>
+						</div>
+					</div>
+					<!-- /contact -->
+	
+					<!-- contact form -->
+					<div class="col-md-8 col-md-offset-2">
+						<form class="contact-form">
+							<input type="text" class="input" placeholder="שם">
+							
+							<input type="email" class="input" placeholder="אימייל">
+							<input type="text" class="input" placeholder="נושא">
+							<textarea class="input" placeholder="הערות"></textarea>
+							<button class="main-btn">שלח הודעה</button>
+						</form>
+					</div>
+					<!-- /contact form -->
+			
+					  </div>
+					  
 
 			</div>
 			<!-- /Row -->
@@ -276,7 +219,7 @@
 
 
 	<!-- Why Choose Us -->
-	<div id="features" class="section md-padding bg-grey">
+	<div id="features" class="section md-padding">
 
 		<!-- Container -->
 		<div class="container">
@@ -286,37 +229,34 @@
 
 				<!-- why choose us content -->
 				<div class="col-md-6">
-					<div class="section-header">
-						<h2 class="title">Why Choose Us</h2>
-					</div>
-					<p>Molestie at elementum eu facilisis sed odio. Scelerisque in dictum non consectetur a erat. Aliquam id diam maecenas ultricies mi eget mauris. Ultrices sagittis orci a scelerisque purus.</p>
-					<div class="feature">
-						<i class="fa fa-check"></i>
-						<p>Quis varius quam quisque id diam vel quam elementum.</p>
-					</div>
-					<div class="feature">
-						<i class="fa fa-check"></i>
-						<p>Mauris augue neque gravida in fermentum.</p>
-					</div>
-					<div class="feature">
-						<i class="fa fa-check"></i>
-						<p>Orci phasellus egestas tellus rutrum.</p>
-					</div>
-					<div class="feature">
-						<i class="fa fa-check"></i>
-						<p>Nec feugiat nisl pretium fusce id velit ut tortor pretium.</p>
-					</div>
+			
 				</div>
 				<!-- /why choose us content -->
 
 				<!-- About slider -->
-				<div class="col-md-6">
-					<div id="about-slider" class="owl-carousel owl-theme">
-						<img class="img-responsive" src="assets/Template/img/about1.jpg" alt="">
-						<img class="img-responsive" src="assets/Template/img/about2.jpg" alt="">
-						<img class="img-responsive" src="assets/Template/img/about1.jpg" alt="">
-						<img class="img-responsive" src="assets/Template/img/about2.jpg" alt="">
-					</div>
+				<div class="col-md-6" style="direction: rtl;" >
+			
+						<div class="section-header">
+								<h2 class="title">למה לבחור בנו</h2>
+							</div>
+							<h3>מתלבטים מהי הבחירה הנכונה עבורכם? הנה כמה סיבות למה לבחור בנו</h3>
+							<div class="feature">
+								<i class="fa fa-check"></i>
+								<h4>מקצועיות ללא פשרות</h4>
+							</div>
+							<div class="feature">
+								<i class="fa fa-check"></i>
+								<h4>איכות ללא פשרות</h4>
+							</div>
+							<div class="feature">
+								<i class="fa fa-check"></i>
+								<h4>שירות ומענה אישי צמוד</h4>
+							</div>
+							<div class="feature">
+								<i class="fa fa-check"></i>
+								<h4>סטנדרטים גבוהים</h4>
+							</div>
+
 				</div>
 				<!-- /About slider -->
 
@@ -328,176 +268,6 @@
 
 	</div>
 	<!-- /Why Choose Us -->
-
-
-	<!-- Numbers -->
-	<div id="numbers" class="section sm-padding">
-
-		<!-- Background Image -->
-		<div class="bg-img" style="background-image: url('assets/Template/img/background2.jpg');">
-			<div class="overlay"></div>
-		</div>
-		<!-- /Background Image -->
-
-		<!-- Container -->
-		<div class="container">
-
-			<!-- Row -->
-			<div class="row">
-
-				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="number">
-						<i class="fa fa-users"></i>
-						<h3 class="white-text"><span class="counter">451</span></h3>
-						<span class="white-text">Happy clients</span>
-					</div>
-				</div>
-				<!-- /number -->
-
-				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="number">
-						<i class="fa fa-trophy"></i>
-						<h3 class="white-text"><span class="counter">12</span></h3>
-						<span class="white-text">Awards won</span>
-					</div>
-				</div>
-				<!-- /number -->
-
-				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="number">
-						<i class="fa fa-coffee"></i>
-						<h3 class="white-text"><span class="counter">154</span>K</h3>
-						<span class="white-text">Cups of Coffee</span>
-					</div>
-				</div>
-				<!-- /number -->
-
-				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="number">
-						<i class="fa fa-file"></i>
-						<h3 class="white-text"><span class="counter">45</span></h3>
-						<span class="white-text">Projects completed</span>
-					</div>
-				</div>
-				<!-- /number -->
-
-			</div>
-			<!-- /Row -->
-
-		</div>
-		<!-- /Container -->
-
-	</div>
-	<!-- /Numbers -->
-
-	<!-- Pricing -->
-	<div id="pricing" class="section md-padding">
-
-		<!-- Container -->
-		<div class="container">
-
-			<!-- Row -->
-			<div class="row">
-
-				<!-- Section header -->
-				<div class="section-header text-center">
-					<h2 class="title">Pricing Table</h2>
-				</div>
-				<!-- /Section header -->
-
-				<!-- pricing -->
-				<div class="col-sm-4">
-					<div class="pricing">
-						<div class="price-head">
-							<span class="price-title">Basic plan</span>
-							<div class="price">
-								<h3>$9<span class="duration">/ month</span></h3>
-							</div>
-						</div>
-						<ul class="price-content">
-							<li>
-								<p>1GB Disk Space</p>
-							</li>
-							<li>
-								<p>100 Email Account</p>
-							</li>
-							<li>
-								<p>24/24 Support</p>
-							</li>
-						</ul>
-						<div class="price-btn">
-							<button class="outline-btn">Purchase now</button>
-						</div>
-					</div>
-				</div>
-				<!-- /pricing -->
-
-				<!-- pricing -->
-				<div class="col-sm-4">
-					<div class="pricing">
-						<div class="price-head">
-							<span class="price-title">Silver plan</span>
-							<div class="price">
-								<h3>$19<span class="duration">/ month</span></h3>
-							</div>
-						</div>
-						<ul class="price-content">
-							<li>
-								<p>1GB Disk Space</p>
-							</li>
-							<li>
-								<p>100 Email Account</p>
-							</li>
-							<li>
-								<p>24/24 Support</p>
-							</li>
-						</ul>
-						<div class="price-btn">
-							<button class="outline-btn">Purchase now</button>
-						</div>
-					</div>
-				</div>
-				<!-- /pricing -->
-
-				<!-- pricing -->
-				<div class="col-sm-4">
-					<div class="pricing">
-						<div class="price-head">
-							<span class="price-title">Gold plan</span>
-							<div class="price">
-								<h3>$39<span class="duration">/ month</span></h3>
-							</div>
-						</div>
-						<ul class="price-content">
-							<li>
-								<p>1GB Disk Space</p>
-							</li>
-							<li>
-								<p>100 Email Account</p>
-							</li>
-							<li>
-								<p>24/24 Support</p>
-							</li>
-						</ul>
-						<div class="price-btn">
-							<button class="outline-btn">Purchase now</button>
-						</div>
-					</div>
-				</div>
-				<!-- /pricing -->
-
-			</div>
-			<!-- Row -->
-
-		</div>
-		<!-- /Container -->
-
-	</div>
-	<!-- /Pricing -->
 
 
 	<!-- Testimonial -->
@@ -725,71 +495,7 @@
 	</div>
 	<!-- /Blog -->
 
-	<!-- Contact -->
-	<div id="contact" class="section md-padding">
 
-		<!-- Container -->
-		<div class="container">
-
-			<!-- Row -->
-			<div class="row">
-
-				<!-- Section-header -->
-				<div class="section-header text-center">
-					<h2 class="title">Get in touch</h2>
-				</div>
-				<!-- /Section-header -->
-
-				<!-- contact -->
-				<div class="col-sm-4">
-					<div class="contact">
-						<i class="fa fa-phone"></i>
-						<h3>Phone</h3>
-						<p>512-421-3940</p>
-					</div>
-				</div>
-				<!-- /contact -->
-
-				<!-- contact -->
-				<div class="col-sm-4">
-					<div class="contact">
-						<i class="fa fa-envelope"></i>
-						<h3>Email</h3>
-						<p>email@support.com</p>
-					</div>
-				</div>
-				<!-- /contact -->
-
-				<!-- contact -->
-				<div class="col-sm-4">
-					<div class="contact">
-						<i class="fa fa-map-marker"></i>
-						<h3>Address</h3>
-						<p>1739 Bubby Drive</p>
-					</div>
-				</div>
-				<!-- /contact -->
-
-				<!-- contact form -->
-				<div class="col-md-8 col-md-offset-2">
-					<form class="contact-form">
-						<input type="text" class="input" placeholder="Name">
-						<input type="email" class="input" placeholder="Email">
-						<input type="text" class="input" placeholder="Subject">
-						<textarea class="input" placeholder="Message"></textarea>
-						<button class="main-btn">Send message</button>
-					</form>
-				</div>
-				<!-- /contact form -->
-
-			</div>
-			<!-- /Row -->
-
-		</div>
-		<!-- /Container -->
-
-	</div>
-	<!-- /Contact -->
 
 
 	<!-- Footer -->
