--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -215,7 +215,7 @@
 					<!-- contact form -->
 					<div class="col-md-8 col-md-offset-2">
 						<form class="contact-form" onsubmit="return false">
-							<input [ngModelOptions]="{standalone: true}" [(ngModel)]="form.name" id="firstName" name="firstName" type="text" class="input" placeholder="שם" required (keyup)="nameCheck()">
+							<input [ngModelOptions]="{standalone: true}" [(ngModel)]="form.name" id="firstName" name="firstName" type="text" class="input" placeholder="שם מלא" required (keyup)="nameCheck()">
 							
 							<input required [ngModelOptions]="{standalone: true}" [(ngModel)]="form.Email" id="Email" name="Email" type="email" class="input" placeholder="אימייל" required (keyup)="EmailCheck()">
 
@@ -233,9 +233,17 @@
 						</form>
 					</div>
 					<!-- /contact form -->
+
+				
+
+
+
 			
 					  </div>
 					  
+					  <div class="alert success">
+						<p class="container"><span class="fa fa-check"></span>{{formMessage}} <span class="close fa fa-close"></span></p>
+					  </div>
 
 			</div>
 			<!-- /Row -->
