--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,9 @@
 									<li><a href="blog-single.html">בלוג פוסט</a></li>
 								</ul>
 						</li>
-							<li><a href="#team">צוות</a></li>
+							<li><a href="#team">המלצות</a></li>
+
+							<li><a href="#UploadFiles">העלאת קבצים</a></li>
 						
 							<li><a href="#newcontact">צור קשר</a></li>
 						<li><a href="#about">עלינו</a></li>
@@ -50,8 +52,10 @@
 						<li><a href="#about">עלינו</a></li>
 
 						<li><a href="#newcontact">צור קשר</a></li>
+
+						<li><a href="#UploadFiles">העלאת קבצים</a></li>
 						
-							<li><a href="#team">צוות</a></li>
+							<li><a href="#team">המלצות</a></li>
 						
 							<li class="has-dropdown"><a href="#blog">בלוג</a>
 								<ul class="dropdown">
@@ -242,7 +246,7 @@
 					  </div>
 					  
 					  <div class="alert success">
-						<p class="container"><span class="fa fa-check"></span>{{formMessage}} <span class="close fa fa-close"></span></p>
+						<p class="container"><span id="vi" class="fa fa-check"></span>{{formMessage}} <span class="close fa fa-close"></span></p>
 					  </div>
 
 			</div>
@@ -250,7 +254,11 @@
 
 		</div>
 		<!-- /Container -->
+
+		<div id="UploadFiles">
 		<app-files-upload></app-files-upload>
+
+	</div>
 
 	</div>
 	<!-- /Service -->
@@ -373,7 +381,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">Our Team</h2>
+					<h2 class="title">המלצות</h2>
 				</div>
 				<!-- /Section header -->
 
@@ -382,17 +390,11 @@
 					<div class="team">
 						<div class="team-img">
 							<img class="img-responsive" src="assets/Template/img/team1.jpg" alt="">
-							<div class="overlay">
-								<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>
-							</div>
+						
 						</div>
 						<div class="team-content">
-							<h3>John Doe</h3>
-							<span>Web Designer</span>
+							<h3>טעמים פלוס</h3>
+							<span>יבוא קפה מהעולם</span>
 						</div>
 					</div>
 				</div>
@@ -403,13 +405,7 @@
 					<div class="team">
 						<div class="team-img">
 							<img class="img-responsive" src="assets/Template/img/team2.jpg" alt="">
-							<div class="overlay">
-								<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>
-							</div>
+						
 						</div>
 						<div class="team-content">
 							<h3>John Doe</h3>
@@ -424,13 +420,7 @@
 					<div class="team">
 						<div class="team-img">
 							<img class="img-responsive" src="assets/Template/img/team3.jpg" alt="">
-							<div class="overlay">
-								<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>
-							</div>
+						
 						</div>
 						<div class="team-content">
 							<h3>John Doe</h3>
@@ -460,7 +450,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">Recents news</h2>
+					<h2 class="title">מאמרים</h2>
 				</div>
 				<!-- /Section header -->
 
