--- a/src/app/files-upload/files-upload.component.css
+++ b/src/app/files-upload/files-upload.component.css
@@ -23,5 +23,34 @@ body{
     text-align: center;
 }
 .FilesErrors{
-    direction: rtl;
+   
 }
+
+.alert {
+    direction: rtl;
+    padding: 9px;
+    background-color: #f44336;
+    color: white;
+    text-align: center;
+   
+  }
+
+  .green{
+      background-color: #4CAF50 !important;
+  }
+
+  
+  .closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  .closebtn:hover {
+    color: black;
+  }
